src/test/resources/negative/EmptyModule.java
import net.nokok.draft.DraftModule;

@DraftModule
interface Empty {
    
}